--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,12 @@
 {
-  "name": "VS Chat App",
-  "short_name": "ChatApp",
-  "description": "Mobile-friendly chat app with push notifications",
+  "name": "Chat App",
+  "short_name": "Chat",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
-  "orientation": "portrait-primary",
   "icons": [
-    {
-      "src": "/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icon-512x512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
